--- a/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -1,14 +1,32 @@
 <section class="container">
+
   <header class="header d-flex">
-    <h2 class="ff-inter">Meu Mural</h2>
-    <button routerLink="/criarPensamento" class="botao">Adicionar pensamento</button>
+    <div class="buscar-pensamentos">
+      <input type="search" autofocus class="filtro" placeholder="Oque você procura?" [(ngModel)]="filtro" (keyup)="pesquisarPensamentos()">
+    </div>
+    <h2 class="ff-inter">{{ titulo }}</h2>
+    <div class="botoes">
+      <button class="botao" (click)="recaregarComponente()" [disabled]="abaMural">Meu mural</button>
+      <button class="botao" (click)="listarFavoritos()"  [disabled]="abaFavoritos">Meus favoritos</button>
+      <button routerLink="/criarPensamento" class="botao">Novo pensamento</button>
+    </div>
   </header>
+
   <div class="mural" *ngIf="listaPensamentos.length > 0, else semPensamentos">
     <div *ngFor="let pensamento of listaPensamentos">
-      <app-pensamento [pensamento]="pensamento"></app-pensamento>
+      <app-pensamento [pensamento]="pensamento" [favoritos]="listaFavoritos"></app-pensamento>
     </div>
   </div>
+
 </section>
+
+<app-botao-carregar-mais
+  *ngIf="listaPensamentos.length > 0"
+  [haMaisPensamentos]="haMaisPensamentos"
+  (click)="carregarMaisPensamentos()"
+>
+</app-botao-carregar-mais>
+
 <ng-template #semPensamentos>
   <div class="ff-inter sem-pensamentos">
     <p>Ainda não há pensamentos cadastrados!</p>
