--- a/src/app/componentes/pensamentos/pensamento/pensamento.component.css
+++ b/src/app/componentes/pensamentos/pensamento/pensamento.component.css
@@ -3,18 +3,13 @@
   justify-content: flex-end
 }
 
-.botao-excluir {
-  border: none;
-  cursor: pointer;
-  margin-left: 5px;
-  margin-top: 10px;
-}
-
+.botao-excluir,
+.botao-favorito,
 .botao-editar {
   border: none;
   cursor: pointer;
-  margin-right: 10px;
-  margin-top: 10px;
+  margin-right: 5px;
+  margin-top: 15px;
 }
 
 .pensamento {
